# sentigent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_tests.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
claude-plugin/: .mcp.json  backfill_outcomes.py
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: post-tool-use.sh  pre-tool-use.sh  sentigent_hook.py  sessionstart_hook.py
claude-plugin/skills/: sentigent-learn.md  sentigent-review.md  sentigent-score.md
docs/: ARCHITECTURE-OVERVIEW.md  DECISIONS.md  DESIGN-RESEARCH.md  EVALUATION.md  LOOP-ENGINEERING.md  LOOP.md  OPERATOR-QUICKSTART.md  OPERATOR-RUNBOOK.md  PROOF.md  ROADMAP-PROVE-OR-KILL.md  ROADMAP-STATEFUL-AGENT-OS.md  SIGNALS.md  STEERING-VERDICT-GAPS-2026-06-16.md  THESIS.md  demo-README.md  demo.tape  good-first-issues.md
docs/blog/: 2026-06-13-honest-done.md
eval/: humaneval_ab.py
eval/results/: humaneval_ab.json  humaneval_ab_full.json
examples/: sample-plan.md
examples/refund_agent/: __init__.py  demo.py
guardrails/: core-safety.yaml
migrations/: add_org_setup_patterns.sql
ops/: com.sentigent.loop.plist
ops/launchd/: README.md  com.sentigent.reconcile-routes.plist
scripts/: autonomy_receipt.py  backfill_embeddings.py  backfill_precedents.py  build_profile.py  clone_status.py  doctor.py  export_judgment.py  export_steering.py  flight_summary.py  learn.py  loop_gemma_bakeoff.py  loop_proof.py  operator_preview.py  practice.py  profile_review.py  test_install.sh
sentigent/: __init__.py  cli.py  config.py  events.py  mcp_server.py  observability.py  onboarding.py  policies.py
sentigent/billing/: calculator.py
sentigent/core/: __init__.py  async_engine.py  bash_advisor.py  briefing.py  clarity_scorer.py  clone_readiness.py  coach.py  confidence_calibrator.py  context_assembler.py  decision_capture.py  embedder.py  engine.py  friction_detector.py  gate.py  graph_policy.py  insights.py  intent_extractor.py  intent_synthesizer.py  journey.py  outcome_attributor.py  policy_engine.py  practice_gate.py  precedents.py  profile_builder.py  profile_intelligence.py  profile_learner.py  profile_review.py  prompt_builder.py  prompt_observer.py  prove.py  signals.py  types.py
sentigent/dashboard/: __init__.py  __main__.py  server.py
sentigent/integrations/: __init__.py  langgraph.py  universal.py
sentigent/intelligence/: __init__.py  agent_bus.py  connector.py  executor.py  hub.py  learner.py  llm_judge.py  local_llm.py
sentigent/learning/: __init__.py  outcome.py  pattern_miner.py
sentigent/memory/: __init__.py  store.py  world_model.py
sentigent/operator/: __init__.py  backfill.py  best_practices.py  chain_guard.py  cost.py  dashboard.py  doctor.py  escalation.py  escalation_channel.py  flight_summary.py  flywheel.py  gate.py  goal_dod.py  guardrails.py  judgment_doc.py  loop.py  loop_driver.py  operate.py  parallel.py  plan.py  preview.py  receipt.py  resolver.py  risk.py  roles.py  runner.py  safety.py  scheduler.py  shiftleft.py  steering_doc.py  verifier.py  worktree.py
sentigent/profiles/: __init__.py  code_review.py  customer_support.py  financial_ops.py  registry.py
sentigent/routing/: embeddings.py  matcher.py  reconciler.py
sentigent/scripts/: migrate_skill_router_data.py  reconcile_routing_outcomes.py
sentigent/setup/: __init__.py  drift_detector.py  observer.py  revert_tracker.py  sync.py  writer.py
sentigent/sync/: __init__.py  manager.py
sentigent/telemetry/: cost_tracker.py
site/: diagrams.html  index.html  poster.html  structure.html
site/docs/: fap.html  guardrails.html  loop-engineering.html  quickstart.html
supabase/: config.toml
supabase/migrations/: 002_org_policies.sql  003_org_profiles.sql  004_row_level_security.sql  005_saas_auth.sql  006_fix_rls_recursion.sql  007_intelligence_hub.sql  008_world_model.sql  009_task_context.sql  010_org_relationships.sql  20260217000000_layer2_layer3_schema.sql
tests/: __init__.py  conftest.py  test_ablation_a3.py  test_agent_id_defaults.py  test_backfill_precedents.py  test_baseline_throttle.py  test_billing_calculator.py  test_briefing.py  test_briefing_digest.py  test_calibration_loop.py  test_chain_guard.py  test_cli.py  test_clone_readiness.py  test_compliance.py  test_cost.py  test_cost_store.py  test_cost_tracker.py  test_dashboard.py  test_dashboard_escalations_api.py  test_dashboard_practices_api.py  test_dashboard_routing_api.py  test_decision_capture.py  test_doctor.py  test_drift_detector.py  test_engine.py  test_escalation_channel.py  test_events.py  test_flight_summary.py  test_fly_e2e.py  test_fly_upgrade.py  test_flywheel.py  test_gate.py  test_goal_dod.py  test_graded_score.py  test_hook.py  test_insights.py  test_integration.py  test_intelligence.py  test_intent_synthesizer.py  test_journey.py  (+52 more)
training/: ARCHITECTURE.md  DATA.md  EXPERIMENT.md  STEERING-VERDICT.md  best_practices.yaml  build_dataset.py  compose.py  eval_agreement.py  gen_synthetic.py  lifecycle.yaml  principles.yaml
training/adapters/: claude_code.yaml  codex.yaml
training/eval/: escalation_adversarial.yaml  escalation_recall.py  eval_card.md  experiment_e1.json  fixtures.yaml  fixtures_ext.yaml  gate.py  harness.py  learned_vs_static.py  oracles_ext.py  swebench_ab.py
training/packs/: claude-power-user.yaml  tdd.yaml  (+2 more)
(+73 files in other folders)
