[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentigent"
version = "0.1.0"
description = "The judgment layer that learns. Self-learning operational intuition for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hussi", email = "hussi@sentigent.dev" },
]
keywords = [
    "ai",
    "agents",
    "judgment",
    "guardrails",
    "safety",
    "learning",
    "langgraph",
    "openai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
layer2 = ["supabase>=2.0"]
coach = ["anthropic>=0.40"]
dashboard = ["fastapi>=0.100", "uvicorn>=0.20"]
langgraph = ["langgraph>=0.2"]
openai = ["openai>=1.0"]
embeddings = ["sentence-transformers>=2.0"]
all = [
    "mcp>=1.0",
    "supabase>=2.0",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "openai>=1.0",
    "sentence-transformers>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/hussi9/sentigent"
Documentation = "https://sentigent.dev/docs"
Repository = "https://github.com/hussi9/sentigent"
Issues = "https://github.com/hussi9/sentigent/issues"

[project.scripts]
sentigent = "sentigent.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: mark test as requiring real Supabase credentials (use -m integration to run)",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
